add documentation for favorites
