# config/routes.rb
@@ -9,7 +9,6 @@ Rails.application.routes.draw do
       post "/login", to: "users#login"
       post "/signup", to: "users#create"
       post "/house/:id/favorite", to: "houses#favorite"
-      get "/users/:id/faforites", to: "users#favorites"
       get "/auto_login", to: "users#auto_login"
     end
   end
