# swagger/v1/swagger.yaml
@@ -11,6 +11,111 @@ components:
       type: http
       scheme: bearer
 paths:
+  "/api/v1/favorites":
+    get:
+      summary: endpoint to get all favorites
+      tags:
+      - favorites
+      description: This endpoint alow you to send request to get all the favorites.
+        You must be logged in.
+      security:
+      - basic_auth: []
+      responses:
+        '200':
+          description: Succefully get all the favorites
+          content: {}
+        '401':
+          description: Error Unauthorized, you must pass the login token in the authorize
+            form to login
+          content: {}
+        '422':
+          description: invalid request
+          content: {}
+  "/api/v1/house/{id}/favorite":
+    post:
+      summary: 'Add an house to favorite '
+      tags:
+      - favorites
+      description: This endpoint alow you to send request to add a given house as
+        favorite.
+      security:
+      - basic_auth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: House was successfully added to your favorite!
+          content: {}
+        '401':
+          description: Not authorized
+          content: {}
+        '404':
+          description: Not found
+          content: {}
+        '422':
+          description: invalid request
+          content: {}
+  "/api/v1/favorites/{id}":
+    patch:
+      summary: Send request to update an favorite with a given ID
+      tags:
+      - favorites
+      description: This endpoint alow you to send request to update a favorite
+      security:
+      - basic_auth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '201':
+          description: favorite created
+          content: {}
+        '401':
+          description: Not found
+          content: {}
+        '422':
+          description: invalid request
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                house_id:
+                  type: integer
+              required:
+              - house_id
+    delete:
+      summary: Delete a single favorite
+      tags:
+      - favorites
+      description: This endpoint alow you to send request to delete a single favorites.
+      security:
+      - basic_auth: []
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: favorite deleted
+          content: {}
+        '404':
+          description: favorite not found
+          content: {}
+        '401':
+          description: Not authorized
+          content: {}
   "/api/v1/houses":
     get:
       summary: endpoint to get all the houses
